# mediaeditor

./: .gitattributes  .gitignore  PRD.md  README.md  package-lock.json  package.json  server.js
.cargo/: config.toml
.github/workflows/: tauri-build.yml
htmlver/: README.md  app.js  index.html  styles.css
public/: app.js  index.html  styles.css
scripts/: create-tauri-icon.mjs  prepare-ffmpeg.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
