[package]
name = "mediasplitter-ai"
version = "0.1.0"
description = "MediaSplitter AI Phase 1 desktop app"
authors = ["MediaSplitter AI"]
edition = "2021"

[lib]
name = "mediasplitter_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hound = "3.5"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
whisper-rs = "0.16"
